--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "acl": "~0.4.10",
+    "applicationinsights": "^1.0.2",
     "async": "~2.3.0",
     "body-parser": "~1.17.1",
     "bower": "~1.8.0",
